# personax

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .style.yapf  .yamllint  Makefile  README.zh-CN.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: test.yml
docs/assets/javascripts/: extra.js
docs/assets/stylesheets/: extra.css
docs/reference/: core.md  exceptions.md  index.md  orch.md  utils.md
docs/reference/completion/: index.md  openai.md
docs/reference/context/: index.md  profile.md
docs/reference/ops/: chat_title.md
docs/reference/resource/: index.md
docs/reference/resource/restful/: index.md
docs/reference/resource/restful/ip/: baidu.md  index.md
docs/reference/resource/restful/weather/: amap.md  index.md
docs/reference/tools/: index.md  weather.md
docs/reference/types/: completion.md  completion_chunk.md  context.md  index.md  message.md  stream.md  usage.md
docs/reference/types/compat/: index.md  message.md  tool_calls.md
examples/demo/: .config.example.yml  main.py  requirements.txt
personax/: __init__.py  core.py  exceptions.py  orch.py  utils.py
personax/cache/: __init__.py  cachetools.py
personax/completion/: __init__.py  openai.py
personax/context/: __init__.py  profile.py
personax/core/: __init__.py  orch.py
personax/helpers/: downloaders.py  mixin.py
personax/ops/: chat_title.py
personax/resource/: __init__.py  template.py
personax/resource/restful/: __init__.py
personax/resource/restful/ip/: __init__.py  baidu.py
personax/resource/restful/weather/: __init__.py  amap.py
personax/resources/: __init__.py  storage.py  template.py
personax/resources/rest/: __init__.py
personax/resources/rest/ip/: __init__.py  baidu.py
personax/resources/rest/weather/: __init__.py  amap.py
personax/resources/restful/: __init__.py
personax/resources/restful/ip/: __init__.py  baidu.py
personax/resources/restful/weather/: __init__.py  amap.py
personax/tools/: __init__.py  weather.py
personax/types/: __init__.py  completion.py  completion_chunk.py  context.py  message.py  stream.py  usage.py
personax/types/compat/: message.py  tool_calls.py
prompts/: profile.j2
scripts/: bump.sh  format.sh  lint.sh
scripts/tools/: check-poetry.sh  common.py  common.sh  install-poetry.sh
tests/: test_version.py
tmpl/: prompt.j2
tmpl/context/: profile.j2
