[project]
name = "personax"
version = "0.1.0"
description = ""
authors = [
    {name = "BoChenSHEN",email = "6goddddddd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic (>=2.12.0,<3.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "openai (>=2.3.0,<3.0.0)",
    "json5 (>=0.12.1,<0.13.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cachetools (>=6.2.0,<7.0.0)",
]


[project.optional-dependencies]
dev = ["isort (>=6.1.0,<7.0.0)", "yapf (>=0.43.0,<0.44.0)"]
test = ["mypy (>=1.18.2,<2.0.0)", "pylint (>=3.3.9,<4.0.0)", "pytest (>=8.4.2,<9.0.0)", "pytest-asyncio (>=1.2.0,<2.0.0)", "pytest-cov (>=7.0.0,<8.0.0)", "pytest-mock (>=3.15.1,<4.0.0)", "pre-commit (>=4.3.0,<5.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
